# custom-auth-access-control-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  README.ru.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: main.py
app/api/: deps.py
app/api/routes/: __init__.py  admin.py  auth.py  resources.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  auth.py  resources.py
app/schemas/: admin.py  auth.py  common.py  resources.py
app/scripts/: seed.py
app/services/: auth.py  permissions.py
docs/: auth_authorization_flow.puml
tests/: conftest.py  test_auth.py  test_permissions.py
