[project]
name = "custom-auth-access-control-api"
version = "0.1.0"
description = "FastAPI backend with custom authentication and authorization"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.2",
    "bcrypt==4.0.1",
    "email-validator==2.2.0",
    "fastapi==0.112.2",
    "passlib[bcrypt]==1.7.4",
    "psycopg[binary]==3.2.1",
    "pydantic-settings==2.4.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.32",
    "uvicorn[standard]==0.30.6",
]

[project.optional-dependencies]
dev = [
    "httpx==0.27.2",
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
